[CoordinatedGraphics] The whole content is unnecessarily repainted by animations in non-AC mode pages https://bugs.webkit.org/show_bug.cgi?id=221391 Source/WebKit:

Reviewed by Carlos Garcia Campos.

When triggerRenderingUpdate was called back, it added the whole
view area into the dirty region to repaint in non-AC mode pages.
This caused a problem that the whole content was unnecessarily
repainted by animations in non-AC mode pages

If triggerRenderingUpdate is called back,
DrawingAreaCoordinatedGraphics::display should be called to ensure
WebPage::updateRendering() called even if m_dirtyRegion is empty.

* WebProcess/WebPage/CoordinatedGraphics/DrawingAreaCoordinatedGraphics.cpp:
(WebKit::DrawingAreaCoordinatedGraphics::triggerRenderingUpdate):
Call scheduleDisplay() instead of setNeedsDisplay().
(WebKit::DrawingAreaCoordinatedGraphics::didUpdate):
(WebKit::DrawingAreaCoordinatedGraphics::scheduleDisplay): Don't
return early even if m_dirtyRegion is empty.
(WebKit::DrawingAreaCoordinatedGraphics::display()): Ditto.
(WebKit::DrawingAreaCoordinatedGraphics::display(UpdateInfo&)):
Return early if m_dirtyRegion is empty.

LayoutTests:

<rdar://problem/74207093>

Reviewed by Carlos Garcia Campos.

* platform/gtk/TestExpectations: Unmarked tests for Bug 222026.

Canonical link: https://commits.webkit.org/234220@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@273019 268f45cc-cd09-0410-ab3c-d52691b4dbfc