Source/WebKit/WebProcess/WebPage/CoordinatedGraphics/DrawingAreaCoordinatedGraphics.cpp
@@ -356,7 +356,7 @@ void DrawingAreaCoordinatedGraphics::triggerRenderingUpdate()
     if (m_layerTreeHost)
         m_layerTreeHost->scheduleLayerFlush();
     else
-        setNeedsDisplay();
+        scheduleDisplay();
 }
 
 #if USE(COORDINATED_GRAPHICS)
@@ -472,6 +472,9 @@ void DrawingAreaCoordinatedGraphics::didUpdate()
         return;
 
     m_isWaitingForDidUpdate = false;
+
+    if (m_dirtyRegion.isEmpty())
+        return;
 
     // Display if needed. We call displayTimerFired here since it will throttle updates to 60fps.
     displayTimerFired();
@@ -683,9 +686,6 @@ void DrawingAreaCoordinatedGraphics::scheduleDisplay()
     if (m_isPaintingSuspended)
         return;
 
-    if (m_dirtyRegion.isEmpty())
-        return;
-
     if (m_displayTimer.isActive())
         return;
 
@@ -707,9 +707,6 @@ void DrawingAreaCoordinatedGraphics::display()
         return;
 
     if (m_isPaintingSuspended)
-        return;
-
-    if (m_dirtyRegion.isEmpty())
         return;
 
     if (m_shouldSendDidUpdateBackingStoreState) {
@@ -764,6 +761,9 @@ void DrawingAreaCoordinatedGraphics::display(UpdateInfo& updateInfo)
     // The layout may have put the page into accelerated compositing mode. If the LayerTreeHost is
     // in charge of displaying, we have nothing more to do.
     if (m_layerTreeHost)
+        return;
+
+    if (m_dirtyRegion.isEmpty())
         return;
 
     updateInfo.viewSize = m_webPage.size();
